# openvpn-plugin-rs

./: .gitignore  .travis.yml  CHANGELOG.md  COPYRIGHT  Cargo.toml  LICENSE-MIT  README.md  appveyor.yml
debug-plugin/: Cargo.toml
debug-plugin/src/: lib.rs
src/: lib.rs  logging.rs  types.rs
src/ffi/: mod.rs  parse.rs  structs.rs
