[package]
name = "openvpn-plugin"
version = "0.3.0"
authors = ["Mullvad VPN <admin@mullvad.net>", "Linus Färnstrand <linus@mullvad.net>"]
description = "A crate allowing easy creation of OpenVPN plugins in Rust"
keywords = ["openvpn", "vpn", "plugin", "ffi", "cdylib"]
categories = ["api-bindings", "external-ffi-bindings", "network-programming"]
repository = "https://github.com/mullvad/openvpn-plugin-rs"
license = "MIT/Apache-2.0"
edition = "2018"

[dependencies]
serde = { version = "1.0", optional = true, features = ["derive"] }
log = { version = "0.4", optional = true }
derive-try-from-primitive = "0.1.0"
