[package]
name = "openvpn-plugin"
version = "0.4.3"
authors = ["Mullvad VPN", "Linus Färnstrand <linus@mullvad.net>"]
description = "A crate allowing easy creation of OpenVPN plugins in Rust"
keywords = ["openvpn", "vpn", "plugin", "ffi", "cdylib"]
categories = ["api-bindings", "external-ffi-bindings", "network-programming"]
repository = "https://github.com/mullvad/openvpn-plugin-rs"
license = "MIT OR Apache-2.0"
edition = "2018"
readme = "./README.md"

[features]
# Adds `EventType::AuthFailed`. This plugin event is specific to the Mullvad VPN fork of OpenVPN,
# which is useful to anyone who want to detect client authentication failures in an OpenVPN plugin.
# This event will never happen on standard upstream OpenVPN.
# NOTE: This feature is unstable. The event type number may change at any time.
# https://github.com/mullvad/openvpn
auth-failed-event = []

[dependencies]
serde = { version = "1.0", optional = true, features = ["derive"] }
log = { version = "0.4", optional = true }
derive-try-from-primitive = "1.0.0"
